--- a/feature_profile/build.gradle
+++ b/feature_profile/build.gradle
@@ -58,6 +58,9 @@ dependencies {
     //firestore
     implementation 'com.google.firebase:firebase-firestore-ktx:24.1.1'
 
+    //firebase auth
+    implementation 'com.google.firebase:firebase-auth-ktx:21.1.0'
+
     implementation project(":ui")
     implementation project(":core")
 }
